Update 1.0.0-SNAPSHOT-beta2